--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<div class="wrapper">
 			<div class="main__about">
 				<div class="about__left">
-					<img src="Images/mac.png" alt="mac" class="mv-100">
+					<img src="mac.png" alt="mac" class="mv-100">
 				</div>
 				<div class="about__right">
 					<h1><span class="bild">Some words</span>about us</h1>
@@ -82,22 +82,22 @@
 				<p><i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus ex quidem maiores ullam quis, at asperiores minus ad eaque maxime possimus cum ab iusto assumenda velit excepturi porro ipsa tenetur.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus ex quidem maiores ullam quis, at asperiores minus ad eaque maxime possimus cum ab iusto assumenda velit excepturi porro ipsa tenetur.</i></p>
 				<div class="services__cards">
 					<div class="services__card">
-						<img src="Images/webDesign.png" alt="webDesign">
+						<img src="webDesign.png" alt="webDesign">
 						<h4>WEB DESIGN</h4>
 						<p>The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
 					</div>
 					<div class="services__card">
-						<img src="Images/mobileApps.png" alt="mobileApps">
+						<img src="mobileApps.png" alt="mobileApps">
 						<h4>MOBILE APPS</h4>
 						<p>The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
 					</div>
 					<div class="services__card">
-						<img src="Images/photography.png" alt="photography">
+						<img src="photography.png" alt="photography">
 						<h4>MOBILE APPS</h4>
 						<p>The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
 					</div>
 					<div class="services__card">
-						<img src="Images/marketing.png" alt="marketing">
+						<img src="marketing.png" alt="marketing">
 						<h4>MOBILE APPS</h4>
 						<p>The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
 					</div>
@@ -109,11 +109,11 @@
 				<h1><span class="someof">SOME OF</span> OUR CLIENTS</h1>
 				<div class="line"></div>
 				<div class="clients">
-					<img src="Images/chanel.png" alt="chanel">
-					<img src="Images/zara.png" alt="zara">
-					<img src="Images/guerline.png" alt="guerline">
-					<img src="Images/lancome.png" alt="lancome">
-					<img src="Images/lacoste.png" alt="lacoste">
+					<img src="chanel.png" alt="chanel">
+					<img src="zara.png" alt="zara">
+					<img src="guerline.png" alt="guerline">
+					<img src="lancome.png" alt="lancome">
+					<img src="lacoste.png" alt="lacoste">
 				</div>
 			</div>
 		</div>
